# hark

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  config.toml  email.txt  index.html  justfile  package-lock.json  package.json  vite.config.js
examples/: imap-listen.rs
src/: anchor.rs  data.rs  frontend.rs  lib.rs  main.rs  response.rs  settings.rs  startup.rs  state.rs  task.rs  telemetry.rs  templates.rs  tracing.rs  types.rs  window.rs
src/background/: command.rs  mod.rs  worker.rs
src/connection/: mod.rs  pool.rs  refresh.rs  task.rs  types.rs
src/connection/types/: flavour.rs  handle.rs  mod.rs
src/imap/: body.rs  connect.rs  lazy.rs  mod.rs  session.rs  types.rs
src/routes/: connection.rs  mod.rs  ui.rs
src/session/: lazy.rs  mod.rs  pool.rs
templates/: index.html  layout.html  main.js
templates/style/: main.css
tests/api/: email.rs  health_check.rs  helpers.rs  main.rs  matchers.rs
tests/api/routes/: connection.rs  lazy.rs  mod.rs  receive.rs
tests/system/: main.rs  ping.rs
web/: App.vue  style.css
web/components/: AppButton.vue  AppCheckbox.vue  AppField.vue  AppInput.vue  AppSelect.vue  ConnectionModal.vue  MessageViewer.vue  StateTag.vue
web/store/: app.js
