[package]
name = "hark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
axum = "0.7.5"
base64 = "0.22.1"
base64-serde = "0.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
futures = "0.3.30"
imap-proto = "0.16.5"
itertools = "0.13.0"
mail-parser = "0.9.3"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
stop-token = "0.7.0"
thiserror = "1.0.63"
tokio = { version = "1.39.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["v4"] }
reqwest = { version = "0.12.5", features = ["json"] }

[dependencies.oauth2]
version = "4.4.2"
default-features = false
features = ["reqwest", "native-tls"]

[dependencies.async-imap]
version = "0.9.7"
default-features = false
features = ["runtime-tokio"]

[dependencies.async-native-tls]
version = "0.5.0"
default-features = false
features = ["runtime-tokio"]

[dev-dependencies]
lettre = { version = "0.11.7", features = [
    "builder",
    "smtp-transport",
    "tokio1-native-tls",
    "tokio1",
    "serde",
] }
rand = "0.8.5"
wiremock = "0.6.1"
