[package]
name = "hark"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
axum = "0.7.7"
base64 = "0.22.1"
base64-serde = "0.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
futures = "0.3.31"
imap-proto = "0.16.5"
itertools = "0.13.0"
mail-parser = "0.9.4"
once_cell = "1.20.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
stop-token = "0.7.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4"] }
reqwest = { version = "0.12.8", features = ["json"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
tracing-error = "0.2.0"

[dependencies.oauth2]
version = "4.4.2"
default-features = false
features = ["reqwest", "native-tls"]

[dependencies.async-imap]
version = "0.10.2"
default-features = false
features = ["runtime-tokio"]

[dependencies.async-native-tls]
version = "0.5.0"
default-features = false
features = ["runtime-tokio"]

[dev-dependencies]
lettre = { version = "0.11.9", features = [
    "builder",
    "smtp-transport",
    "tokio1-native-tls",
    "tokio1",
    "serde",
] }
rand = "0.8.5"
wiremock = "0.6.2"
