[package]
name = "hark"
version = "0.1.0"

[dependencies]
async-channel = "2.3.1"
axum = { version = "0.8.9", features = ["macros"] }
base64 = "0.22.1"
base64-serde = "0.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.15.23"
futures = "0.3.31"
imap-proto = "0.16.5"
itertools = "0.14.0"
mail-parser = "0.11.3"
once_cell = "1.20.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
stop-token = "0.7.0"
thiserror = "2.0.18"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
tracing-error = "0.2.0"
dashmap = "6.1.0"
oauth2 = { version = "5.0.0" }
askama = "0.16.0"
askama_web = { version = "0.16.0", features = ["axum-0.8"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-rustls = "0.26.4"
rustls-native-certs = "0.8.3"

[dependencies.async-imap]
version = "0.11.2"
default-features = false
features = ["runtime-tokio"]

[dev-dependencies]
rand = "0.10.1"
wiremock = "0.6.2"

[dev-dependencies.lettre]
version = "0.11.22"
default-features = false
features = [
    "builder",
    "smtp-transport",
    "tokio1-rustls",
    "rustls-native-certs",
    "aws-lc-rs",
    "tokio1",
    "serde",
]

[profile.release]
strip = "debuginfo"
opt-level = 3
codegen-units = 1
panic = "abort"
lto = true
